[package]
name = "browser_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "My first browser extension, using basic JS and Rust/WASM!"

[dependencies]

sha2 = "0.10.8"
wasm-bindgen = "0.2"

[lib]

name = "browser_extension"
path = "lib.rs"

crate-type = ["cdylib", "rlib"]